overflow auto added to result display to stop calculator display from expanding on longer inputs

--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -25,6 +25,16 @@
   --theme-charcoal: #111209;
 }
 
+.calculator-container {
+  font-family: 'Inter', sans-serif;
+}
+.circle-wrap {
+  margin-right: 20em;
+}
+
+#circle-caption {
+}
+
 #calculatorWrapper {
   display: flex;
   flex-direction: column;
@@ -42,6 +52,7 @@
   border-radius: 10px;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background-color: #302a1c;
   padding-top: 20px;
   padding-bottom: 40px;
@@ -124,4 +135,24 @@ button:hover {
 #subtract {
   grid-column: 4 / 5;
   grid-row: 3 / 4;
+}
+
+@media (max-width: 375px) {
+  nav.header {
+    display: none;
+  }
+  #calculatorWrapper {
+    align-items: normal;
+  }
+  #calculatorBody {
+    max-width: 250px;
+
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .calculator-container {
+    align-items: center;
+  }
+  .button {
+  }
 }
